--- a/03-Vibe-Hardware.Rmd
+++ b/03-Vibe-Hardware.Rmd
@@ -5,14 +5,14 @@ This chapter provides an overview of Vibe hardware.
 
 **The following is covered in this chapter:**
 
--   [3.1. Console](https://vibemanual.compulite.com/vibe-hardware.html#console)
--   [3.2. Editor Controls](https://vibemanual.compulite.com/vibe-hardware.html#editor-controls)
--   [3.3. Motorized Sliders and Qkeys](https://vibemanual.compulite.com/vibe-hardware.html#motorized-sliders-and-qkeys)
--   [3.4. Master Controller and Control Keys](https://vibemanual.compulite.com/vibe-hardware.html#master-controller-and-control-keys)
--   [3.5. Aux Qkeys, Grand Master, and Global Controllers](https://vibemanual.compulite.com/vibe-hardware.html#aux-qkeys-grand-master-and-global-controllers)
+-   [3.1. Console](#Console-3.1)
+-   [3.2. Editor Controls](#Editor-Controls-3.2)
+-   [3.3. Motorized Sliders and Qkeys](#Motorized-Sliders-and-Qkeys-3.3)
+-   [3.4. Master Controller and Control Keys](#Master-Controller-and-Control-Keys-3.4)
+-   [3.5. Aux Qkeys, Grand Master, and Global Controllers](#Aux-Qkeys-Grand Master-and-Global-Controllers-3.5)
 
 
-## Console
+## Console {#Console-3.1}
 
 <p align="center">
   <img width="" height="" src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FoXar4XEyvpm48DVT7GxC%2F3.1.webp?alt=media&token=2b25b3aa-fc22-45b1-a018-bd5bfe5ec5a7"> 
@@ -29,8 +29,7 @@ This chapter provides an overview of Vibe hardware.
 
 
 
-
-## Editor Controls
+## Editor Controls {#Editor-Controls-3.2}
 
 <p align="center">
   <img width="" height="" src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FJOCXTVt329PaiHlLxdDM%2F3.2.webp?alt=media&token=e05ff57b-0114-43e5-851a-2980421d8225">
@@ -59,7 +58,7 @@ Editor Controls are used to program and edit parameter values for all fixtures a
  
  • <span style="color:Gray">Navigation keys</span>
 
-## Motorized Sliders and Qkeys
+## Motorized Sliders and Qkeys {#Motorized-Sliders-and-Qkeys-3.3}
 
 <p align="center">
   <img width="" height="" src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FxsWfMbqMqt1HoY8RjkUG%2F3.3.webp?alt=media&token=88f965be-30de-4ae9-bc05-77a7b881cf97"> 
@@ -86,7 +85,7 @@ Editor Controls are used to program and edit parameter values for all fixtures a
  • <span style="color:Gray">Snap</span>
 
 
-## Master Controller and Control Keys
+## Master Controller and Control Keys {#Master-Controller-and-Control-Keys-3.4}
 
 <p align="center">
   <img width="" height="" src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FeKxmo9RyqPKPWmOtQUtI%2F3.4.webp?alt=media&token=f13a5178-75d3-4156-8951-e33ff77ddc53"> 
@@ -113,7 +112,7 @@ Editor Controls are used to program and edit parameter values for all fixtures a
  • **[TEACH]** for BBM tap time
 
 
-## Aux Qkeys, Grand Master, and Global Controllers
+## Aux Qkeys, Grand Master, and Global Controllers {#Aux-Qkeys-Grand Master-and-Global-Controllers-3.5}
 
 <p align="center">
   <img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F0sZ9sO4ZJRnSUlSMY8jv%2F3.5.webp?alt=media&token=35001380-7789-4973-bd6a-e0c6eeeb6edb">
