--- a/05-File-Management.Rmd
+++ b/05-File-Management.Rmd
@@ -6,11 +6,11 @@ This chapter deals with saving and loading Vibe show files as well as the import
 
 **The following is covered in this chapter:**
 
--  [5.1 Show Menu](https://vibemanual.compulite.com/file-management.html#show-menu)
--  [5.2 Load Vector Show](https://vibemanual.compulite.com/file-management.html#load-vector-show)
+-  [5.1 Show Menu](#5.1-Show-Menu)
+-  [5.2 Load Vector Show](#5.2-Load-Vector-Show)
 
 
-## Show Menu
+## Show Menu {#5.1-Show-Menu}
 
 
 The Show menu is the first item of the {VIBE} Menu. It contains 5 sub menus:
@@ -32,7 +32,7 @@ The Show menu is the first item of the {VIBE} Menu. It contains 5 sub menus:
 
 5. **{Load Vector Show}** - ([5.2 Load Vector Show](https://vibemanual.compulite.com/file-management.html#load-vector-show)).
 
-## Load Vector Show
+## Load Vector Show {#5.2-Load-Vector-Show}
 
 
 Vector Shows may be loaded with the following limitations:
