--- a/09-Programming-Basics.Rmd
+++ b/09-Programming-Basics.Rmd
@@ -6,13 +6,13 @@ This chapter deals with the fundamentals of building stage looks in the editor.
 
 **The following is covered in this chapter:**
 
-- [9.1. Editor](https://vibemanual.compulite.com/programming-basics.html#editor)
-- [ 9.2. Editor Tools](https://vibemanual.compulite.com/programming-basics.html#editor-tools)
-- [9.3. Working with Fixtures](https://vibemanual.compulite.com/programming-basics.html#working-with-fixtures)
-- [9.4. Groups](https://vibemanual.compulite.com/programming-basics.html#groups)
+- [9.1. Editor](#9.1.Editor)
+- [ 9.2. Editor Tools](#9.2.EditorTools)
+- [9.3. Working with Fixtures](#9.3.WorkingwithFixtures)
+- [9.4. Groups](#9.4.Groups)
 
 
-## Editor
+## Editor {#9.1.Editor}
 
 Editor Basics:
 
@@ -104,7 +104,7 @@ Vibe has two Blind Editor behaviours:
     
 2. Toggle [VIBE ]+[BLIND] - Copies the contents of the Blind Editor to the Live Editor (The original contents stay in the Blind Editor
 
-## Editor Tools
+## Editor Tools {#9.2.EditorTools}
 
 **Editor Tools:**
 
@@ -438,7 +438,7 @@ By default released fixtures return to their home values as defined by the devic
 
 1.  Press [SCENE] [HOME] [DELETE] - Home values will return to the device profile's home values.
 
-## Working with Fixtures
+## Working with Fixtures {#9.3.WorkingwithFixtures}
 
 Working with Fixtures:
 
@@ -967,7 +967,7 @@ Selected fixtures and/or parameters may be sent to their defaults using the [HOM
 -   Press [SCENE] [HOME] [DELETE]
 
 
-## Groups
+## Groups {#9.4.Groups}
 
 
 > <span style="color:Red">The order that fixtures are typed is stored with a group</span>.
