--- a/10-Programming-Cues-and-Scenes.Rmd
+++ b/10-Programming-Cues-and-Scenes.Rmd
@@ -4,24 +4,24 @@ This chapter deals with storing and editing Editor values.
 
 **The following is covered in this chapter:**
 
-- [10.1. What Are Qlists, Cues, Scenes, and Submasters?](https://vibemanual.compulite.com/programming-cues-and-scenes.html#what-are-qlists-cues-scenes-and-submasters)
-- [10.2. Tracking Principals](https://vibemanual.compulite.com/programming-cues-and-scenes.html#tracking-principals)
-- [10.3. Storing Cues and Scenes Directly to Controllers](https://vibemanual.compulite.com/programming-cues-and-scenes.html#storing-cues-and-scenes-directly-to-controllers)
-- [10.4. Master Controller](https://vibemanual.compulite.com/programming-cues-and-scenes.html#master-controller)
-- [10.5. Storing Cues to the Master Controller](https://vibemanual.compulite.com/programming-cues-and-scenes.html#storing-cues-to-the-master-controller)
-- [10.6. Storing Qlist Cues to any Controller](https://vibemanual.compulite.com/programming-cues-and-scenes.html#storing-qlist-cues-to-any-controller)
-- [10.7. Cue Store Options](https://vibemanual.compulite.com/programming-cues-and-scenes.html#cue-store-options-1)
-- [10.8. Assigning Text Labels](https://vibemanual.compulite.com/programming-cues-and-scenes.html#assigning-text-labels)
-- [10.9. Modifying Cues and Scenes](https://vibemanual.compulite.com/programming-cues-and-scenes.html#modifying-cues-and-scenes)
-- [10.10. Creating New Cues from Existing Cue Data](https://vibemanual.compulite.com/programming-cues-and-scenes.html#creating-new-cues-from-existing-cue-data)
-- [10.11. Cue Time Properties](https://vibemanual.compulite.com/programming-cues-and-scenes.html#cue-time-properties)
-- [10.12. Additional Cue Properties](https://vibemanual.compulite.com/programming-cues-and-scenes.html#additional-cue-properties)
-- [10.13. Parameter Time](https://vibemanual.compulite.com/programming-cues-and-scenes.html#parameter-time)
-- [10.14. Parameter Profile](https://vibemanual.compulite.com/programming-cues-and-scenes.html#parameter-profile)
-- [10.15.  Group Submasters](https://vibemanual.compulite.com/programming-cues-and-scenes.html#group-submasters)
+- [10.1. What Are Qlists, Cues, Scenes, and Submasters?](#10.1.WhatAreQlists-Cues-Scenes-andSubmasters?)
+- [10.2. Tracking Principals](#10.2.TrackingPrincipals)
+- [10.3. Storing Cues and Scenes Directly to Controllers](#10.3.StoringCuesandScenesDirectlytoControllers)
+- [10.4. Master Controller](#10.4.MasterController)
+- [10.5. Storing Cues to the Master Controller](#10.5.StoringCuestotheMasterController)
+- [10.6. Storing Qlist Cues to any Controller](#10.6.StoringQlistCuestoanyController)
+- [10.7. Cue Store Options](#10.7.CueStoreOptions)
+- [10.8. Assigning Text Labels](#10.8.AssigningTextLabels)
+- [10.9. Modifying Cues and Scenes](#10.9.ModifyingCuesandScenes)
+- [10.10. Creating New Cues from Existing Cue Data](#10.10.CreatingNewCuesfromExistingCueData)
+- [10.11. Cue Time Properties](#10.11.CueTimeProperties)
+- [10.12. Additional Cue Properties](#10.12.AdditionalCueProperties)
+- [10.13. Parameter Time](#10.13.ParameterTime)
+- [10.14. Parameter Profile](#10.14.ParameterProfile)
+- [10.15.  Group Submasters](#10.15.GroupSubmasters)
 
 
-## What Are Qlists, Cues, Scenes, and Submasters?
+## What Are Qlists, Cues, Scenes, and Submasters? {#10.1.WhatAreQlists-Cues-Scenes-andSubmasters?}
 
 
 **Qlists:**
@@ -83,7 +83,7 @@ Submasters:
 
 
 
-## Tracking Principals
+## Tracking Principals {#10.2.TrackingPrincipals}
 
 
 
@@ -139,7 +139,7 @@ Vibe uses the **Tracking/Move Fade** philosophy common in most current lighting 
 
 
 
-## Storing Cues and Scenes Directly to Controllers
+## Storing Cues and Scenes Directly to Controllers {#10.3.StoringCuesandScenesDirectlytoControllers}
 
 
 **Cues and Scenes may be stored:**
@@ -179,7 +179,7 @@ Vibe uses the **Tracking/Move Fade** philosophy common in most current lighting 
 2. The Store to Controller pop-up will appear. Tap {Create a new Qlist} the Scene will be assigned the first available Qlist with the Scene's look being converted to Cue 1.
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FqjIYoECGpKkw2eosYT1W%2F10.3.webp?alt=media&token=92e2fb56-797e-4596-869b-0e1c042b9e01)
 
-## Master Controller
+## Master Controller {#10.4.MasterController}
 
 
 In Vibe, at least one controller must be assigned as the [SELECT] controller. This controller will now be linked to the Master Controller.
@@ -214,7 +214,7 @@ By default cues that do not have a Qlist or Controller specified in their destin
 
 
 
-## Storing Cues to the Master Controller
+## Storing Cues to the Master Controller {#10.5.StoringCuestotheMasterController}
 
 >A Qlist must be assigned to the [SELECT] controller before cues can be stored using theatre style keypad syntax
 
@@ -245,7 +245,7 @@ By default cues that do not have a Qlist or Controller specified in their destin
 
 
 
-## Storing Qlist Cues to any Controller
+## Storing Qlist Cues to any Controller {#10.6.StoringQlistCuestoanyController}
 
 ><span style="color:Red">The destination Qlist must be assigned to a controller in advance or after storing the first Cue, the destination Qlist will bump the current cue on the Master Controller out and replace it.</span>.
 
@@ -264,8 +264,7 @@ By default cues that do not have a Qlist or Controller specified in their destin
 
 
 
-## Cue Store Options
-
+## Cue Store Options {#10.7.CueStoreOptions}
 
 In the process of storing a cue, a number of filters and settings are available. 
 
@@ -327,7 +326,7 @@ In the process of storing a cue, a number of filters and settings are available.
 
 
 
-## Assigning Text Labels
+## Assigning Text Labels {#10.8.AssigningTextLabels}
 
 **Assign a Text Label to a Qlist:**
 
@@ -358,7 +357,7 @@ In the process of storing a cue, a number of filters and settings are available.
 
 
 
-## Modifying Cues and Scenes
+## Modifying Cues and Scenes {#10.9.ModifyingCuesandScenes}
 
 **Modify a Cue or Scene using [UPDATE]:**
 
@@ -479,7 +478,7 @@ Cue Settings pop-up
 
 
 
-## Creating New Cues from Existing Cue Data
+## Creating New Cues from Existing Cue Data {#10.10.CreatingNewCuesfromExistingCueData}
 
 **To Copy a Cue to a new Cue:**
 
@@ -521,7 +520,7 @@ Cue Settings pop-up
 
 
 
-## Cue Time Properties
+## Cue Time Properties {#10.11.CueTimeProperties}
 
 **Cue Time Properties:**
 
@@ -632,7 +631,7 @@ Alternately times can be randomly entering by tapping the desired time field and
 >To clear a Follow, turn the physical Follow Wheel until its display and the {Follow} display say N/A Press [ENTER}
 
 
-## Additional Cue Properties
+## Additional Cue Properties {#10.12.AdditionalCueProperties}
 
 Additional Cue Properties:
 
@@ -808,7 +807,7 @@ In many consoles, the only way to create a loop is to create a link from the end
 
 
 
-## Parameter Time
+## Parameter Time {#10.13.ParameterTime}
 
 
 **Parameter Time:**
@@ -1019,7 +1018,7 @@ To Set Fan Cell Time:
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FYEcjecqiWJTijSC3aOss%2Fimage.png?alt=media&token=85286838-edf2-4ba4-9bb8-f6263938dca5)
 
 
-## Parameter Profile
+## Parameter Profile {#10.14.ParameterProfile}
 
 Profile determine a parameter's behavior during a fade.
 Profiles are always relative to the fade time.
@@ -1055,7 +1054,7 @@ User may apply the popup with nothing selected on the options or with all the op
 
 
 
-## Group Submasters
+## Group Submasters {#10.15.GroupSubmasters}
 
 
 **Group Submasters:**
