--- a/12-Libraries.Rmd
+++ b/12-Libraries.Rmd
@@ -5,12 +5,13 @@ This chapter deals with creating and editing Libraries.
 
 **The following is covered in this chapter:**
 
-- [12.1. What are Libraries](https://vibemanual.compulite.com/libraries.html#what-are-libraries)
-- [12.2. Store and Modify Bank Libraries](https://vibemanual.compulite.com/libraries.html#store-and-modify-bank-libraries)
-- [12.3. Object Libraries](https://vibemanual.compulite.com/libraries.html#object-libraries)
+- [12.1. What are Libraries](#12.1.WhatareLibraries)
+- [12.2. Store and Modify Bank Libraries](#12.2.StoreandModifyBankLibraries)
+- [12.3. Object Libraries](#12.3.ObjectLibraries)
 
 
-## What are Libraries
+## What are Libraries {#12.1.WhatareLibraries}
+
 **Vibe has two types of Libraries, Bank Libraries and Object Libraries:**
 
 1.  Bank Libraries - Store commonly used parameter values for Intensity, Position, Color, Beam, Image, Shapers, and Video content. They correspond to the parameter banks. Libraries are essentially filtered cues that are referenced by recorded objects such as Scenes and Cues. There are also two special bank libraries, Custom, and Effects.
@@ -39,7 +40,7 @@ This chapter deals with creating and editing Libraries.
 >Scenes are like Submasters or Group Masters on other consoles. They may be set as additive or subtractive.
 
 
-## Store and Modify Bank Libraries
+## Store and Modify Bank Libraries {#12.2.StoreandModifyBankLibraries}
 
 
 12.2. Store and Modify Bank Libraries
@@ -206,7 +207,7 @@ Library Settings may be changed at any time after they are created using the Lib
 >For most Delete functions, pressing [DELETE] [DELETE] will do the same as pressing [ENTER] or <img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/> to complete the operation.
 
 
-## Object Libraries
+## Object Libraries {#12.3.ObjectLibraries}
 
 
 **See:**
