--- a/24-Network.Rmd
+++ b/24-Network.Rmd
@@ -4,14 +4,14 @@ This chapter deals with configuring, transmitting and receiving DMX over Etherne
 
 **The following is covered in this chapter:**
 
-- [24.1. Network Basics](https://vibemanual.compulite.com/connecting-to-external-devices.html#network-basics)
-- [24.2. Connecting to Compulite ePorts](https://vibemanual.compulite.com/connecting-to-external-devices.html#connecting-to-compulite-eports)
-- [24.3. Connecting to Art-Net and sACN Nodes](https://vibemanual.compulite.com/connecting-to-external-devices.html#connecting-to-art-net-and-sacn-nodes)
-- [24.4. RDM](https://vibemanual.compulite.com/connecting-to-external-devices.html#rdm)
-- [24.5. CITP](https://vibemanual.compulite.com/connecting-to-external-devices.html#citp)
+- [24.1. Network Basics](#24.1.NetworkBasics)
+- [24.2. Connecting to Compulite ePorts](#24.2.ConnectingtoCompuliteePorts)
+- [24.3. Connecting to Art-Net and sACN Nodes](#24.3.ConnectingtoArt-NetandsACNNodes)
+- [24.4. RDM](#24.4.RDM)
+- [24.5. CITP](#24.5.CITP)
 
 
-## Network Basics
+## Network Basics {#24.1.NetworkBasics}
 
 24.1. Network Basics
 
@@ -62,7 +62,7 @@ Each network device must have its own unique static IP address in the form of fo
 
 
 
-## Connecting to Compulite ePorts
+## Connecting to Compulite ePorts {#24.2.ConnectingtoCompuliteePorts}
 
 
 
@@ -110,7 +110,7 @@ Before an ePort can be connected it should be configured using the CNET Manager 
 
 
 
-## Connecting to Art-Net and sACN Nodes
+## Connecting to Art-Net and sACN Nodes {#24.3.ConnectingtoArt-NetandsACNNodes}
 
 Vibe currently supports transmission of 256 universes of DMX over Ethernet using the industry standards of Art-Net versions 1 ⟶ 3, ad eACN (ANSI E1.31-2016 standard).
 
@@ -186,7 +186,7 @@ On the third line – ports 6 ⟶ 10 will be sent to IP 172.16.10.12
 
 
 
-## RDM
+## RDM {#24.4.RDM}
 
 
 Currently, RDM is fully supported on the 8 physical DMX output ports and Compulite VC protocol. **View RDM information:**
@@ -201,7 +201,7 @@ Currently, RDM is fully supported on the 8 physical DMX output ports and Compuli
 
 
 
-## CITP
+## CITP {#24.5.CITP}
 
 
 
