--- a/index.Rmd
+++ b/index.Rmd
@@ -12,17 +12,17 @@ This chapter discusses getting started with your Compulite Vibe console.
 
 **The following is covered in this chapter:**
 
--   [1.1. Unboxing](https://vibemanual.compulite.com/index.html#unboxing)
--   [1.2. Getting Started](https://vibemanual.compulite.com/index.html#getting-started)
--   [1.3. Guide Conventions](https://vibemanual.compulite.com/index.html#guide-conventions)
--   [1.4. Important Terms](https://vibemanual.compulite.com/index.html#important-terms)
--   [1.5  Releases](https://vibemanual.compulite.com/index.html#releases)
+-   [1.1. Unboxing](#Unboxing-1.1)
+-   [1.2. Getting Started](#Getting-Started-1.2)
+-   [1.3. Guide Conventions](#Guide-Conventions-1.3)
+-   [1.4. Important Terms](#Important-Terms-1.4)
+-   [1.5  Releases](#Releases-1.5)
 
-## Unboxing
+## Unboxing {#Unboxing-1.1}
 
 TBA.
 
-## Getting Started
+## Getting Started {#Getting-Started-1.2}
 
 **Power requirements:**
 
@@ -58,7 +58,7 @@ TBA.
 
 - Choose Shut Down the Console - The console will safely power off.
 
-## Guide Conventions
+## Guide Conventions {#Guide-Conventions-1.3}
 
 
 - **[XXXX]** - Physical key
@@ -89,7 +89,7 @@ TBA.
 
 - **[Here]** - Short form for Press an appropriate destination softkey or controller button to complete the command
 
-## Important Terms
+## Important Terms {#Important-Terms-1.4}
 
 
 -   **DMX 512 Output/Input Port** - One of the 8 physical 5 pin XLR connectors on the back of the console. Although the gender is female, any connector may be configured as an input but must use a turnaround adapter.
@@ -149,7 +149,7 @@ TBA.
 
 >👉 Some keys have two functions when used with the [VIBE] key (shift key). In this case, the key label on the bottom is the default, and top label is the shifted function.
 
-## Releases
+## Releases {#Releases-1.5}
 
 ### R.3.0
 
